// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildColumns parses minimal exp show data artificially stuffed with corner cases 1`] = `
Array [
  Array [
    Object {
      "childColumns": Array [
        Object {
          "ancestors": Array [
            "params",
          ],
          "childColumns": Array [
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 6,
              "name": "mixedparam",
              "types": Array [
                "number",
                "string",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 5,
              "name": "boolparam",
              "types": Array [
                "boolean",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 6,
              "name": "stringparam",
              "types": Array [
                "string",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 9,
              "name": "undefparam",
              "types": Array [
                "undefined",
              ],
            },
          ],
          "name": "params.yaml",
        },
      ],
      "name": "params",
    },
    Object {
      "childColumns": Array [
        Object {
          "ancestors": Array [
            "metrics",
          ],
          "childColumns": Array [
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 6,
              "name": "acc",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 18,
              "name": "loss",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 1,
              "name": "step",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 4,
              "name": "boolparam",
              "types": Array [
                "boolean",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 4,
              "name": "nullparam",
              "types": Array [
                "null",
              ],
            },
          ],
          "name": "logs.json",
        },
      ],
      "name": "metrics",
    },
  ],
  Array [
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 6,
      "name": "mixedparam",
      "types": Array [
        "number",
        "string",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 5,
      "name": "boolparam",
      "types": Array [
        "boolean",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 6,
      "name": "stringparam",
      "types": Array [
        "string",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 9,
      "name": "undefparam",
      "types": Array [
        "undefined",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 6,
      "name": "acc",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 18,
      "name": "loss",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 1,
      "name": "step",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 4,
      "name": "boolparam",
      "types": Array [
        "boolean",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 4,
      "name": "nullparam",
      "types": Array [
        "null",
      ],
    },
  ],
]
`;

exports[`buildColumns parses real exp show data 1`] = `
Array [
  Array [
    Object {
      "childColumns": Array [
        Object {
          "ancestors": Array [
            "params",
          ],
          "childColumns": Array [
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 6,
              "name": "lr",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 6,
              "name": "seed",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 1,
              "name": "weight_decay",
              "types": Array [
                "number",
              ],
            },
          ],
          "name": "params.yaml",
        },
      ],
      "name": "params",
    },
    Object {
      "childColumns": Array [
        Object {
          "ancestors": Array [
            "metrics",
          ],
          "childColumns": Array [
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 6,
              "name": "acc",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 18,
              "name": "loss",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 1,
              "name": "step",
              "types": Array [
                "number",
              ],
            },
          ],
          "name": "logs.json",
        },
      ],
      "name": "metrics",
    },
  ],
  Array [
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 6,
      "name": "lr",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 6,
      "name": "seed",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 1,
      "name": "weight_decay",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 6,
      "name": "acc",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 18,
      "name": "loss",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 1,
      "name": "step",
      "types": Array [
        "number",
      ],
    },
  ],
]
`;
